--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,9 @@
-<h1>NEXUS</h1>
+<div class="landing"></div>
+<div class="about">
+  <h1>About Us:</h1>
+
+</div>
+<div class="success">
+  <h1>Success Stories:</h1>
+
+</div>
