--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,27 @@
-<div class="landing"></div>
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
+<nav class="NavBar" >
+  <ul>
+    <a class="Logo" img src="./nexus_X.png"></a>
+    <a class="Home">HOME</a>
+    <a class="AboutUs">ABOUT US</a>
+    <a class="Account">ACCOUNT</a>
+  </ul>
+</nav>
+
+
+<div class="landing">
+  <button class="button1">See Jobs</button>
+  <button class="button2">Our Story</button>
+</div>
 <div class="about">
-  <h1>About Us:</h1>
+  <p class="quote">"Nexus is a Game Changer! We were able to find the developer we needed to reach the next level"
+    -S. Guy
+  </p>
+  <img class="peyton">
 
 </div>
+<div class="aboutBreak"></div>
 <div class="success">
   <h1>Success Stories:</h1>
 
