still working on navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,10 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>Custom Toolbar</span>
-    </mat-toolbar-row>
-  
-    <mat-toolbar-row>
-      <span>Second Line</span>
-      <span class="example-spacer"></span>
-    </mat-toolbar-row>
-  
-    <mat-toolbar-row>
-      <span>Third Line</span>
-      <span class="example-spacer"></span>
-    </mat-toolbar-row>
-  </mat-toolbar>
+<button (click)="toggleCollapse()" type="button">X</button>
+<div class="collapse show" [@collapse]="collapse">
+<mat-toolbar class="toolbar" color="primary">
+  <mat-toolbar-row class="toolbar-row1">
+    <span class="auth"><a href="/auth">Sign in/up</a></span>
+    <span class="jobs"><a href="/jobs">Job Posts</a></span>
+    <span class="profile"><a href="/profile">Profile</a></span>
+  </mat-toolbar-row>
+</mat-toolbar>
+</div>
