--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,26 +3,44 @@
 <nav class="NavBar" >
   <ul>
     <a class="Logo" img src="./nexus_X.png"></a>
-    <a class="Home">HOME</a>
-    <a class="AboutUs">ABOUT US</a>
-    <a class="Account">ACCOUNT</a>
+    <a class="AboutUs" href="http://localhost:4200/landing#aboutSect">ABOUT US</a>
+    <a class="Jobs" routerLink="/posts">JOBS</a>
+    <a class="Account" routerLink="/account">ACCOUNT</a>
   </ul>
 </nav>
 
 
 <div class="landing">
-  <button class="button1">See Jobs</button>
-  <button class="button2">Our Story</button>
+  <button class="button1" routerLink="/posts">SEE JOBS</button>
+  <button class="button2" routerLink="/account">YOUR ACCOUNT</button>
 </div>
-<div class="about">
+<div class="testimony">
+  <img class="peyton">
   <p class="quote">"Nexus is a Game Changer! We were able to find the developer we needed to reach the next level"
     -S. Guy
   </p>
-  <img class="peyton">
+  
 
 </div>
 <div class="aboutBreak"></div>
-<div class="success">
-  <h1>Success Stories:</h1>
 
+
+<div class="about">
+  <a name="aboutSect"></a>
+  <h1>Why Use Nexus?</h1>
+  <p>At Nexus our dream is to help start up companies find the people they need, with the skills they desire
+    to get the job at hand accomplished! Each day we are doing our part to make the connections that will help
+    take you to the next level. Are you looking for a way to find work but not sure if the 9-5 office life is for you?
+    If so, the you have found the place. We are a freelancers dream come true. Employers post jobs that they need and 
+    we simply get you connected. All you have to do is login and you will be connected with hundreds of start up companies
+    that are looking for you! The great news is that you can contact as many employers as you would like to fill your freelance
+    schedule. If you hit it off with a specific company, then maybe you will be what helps them grow to the point where you work
+    your way into exactly what you wanted to start with. Let us help you reach that next level by connectng you today!
+  </p>
 </div>
+
+
+
+<footer class="footer">
+  <h6>Nexus Connect | Nic, Donovan, George | 1150 Academy</h6>
+</footer>
