halfway done with authorization

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,7 +5,7 @@
     <a class="Logo" img src="./nexus_X.png"></a>
     <a class="Home">HOME</a>
     <a class="AboutUs">ABOUT US</a>
-    <a class="Account">ACCOUNT</a>
+    <a class="Account" href="account">ACCOUNT</a>
   </ul>
 </nav>
 
