--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <div class="collapse show" [@collapse]="collapse">
 <mat-toolbar class="toolbar" color="primary">
   <mat-toolbar-row class="toolbar-row1">
-    <span class="auth"><a href="/auth">Sign in/up</a></span>
+    <span class="auth"><a href="/account">Sign in/up</a></span>
     <span class="jobs"><a href="/jobs">Job Posts</a></span>
     <span class="profile"><a href="/profile">Profile</a></span>
   </mat-toolbar-row>
