--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,12 +1,13 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
 <nav class="NavBar" >
+  <!-- <img src="../../assets/nexus_X.png" class="Logo" /> -->
   <ul>
-    <a class="Logo" img src="./nexus_X.png"></a>
     <a class="AboutUs" href="http://localhost:4200/landing#aboutSect">ABOUT US</a>
     <a class="Jobs" routerLink="/posts">JOBS</a>
     <a class="Account" routerLink="/account">ACCOUNT</a>
   </ul>
+  
 </nav>
 
 
