--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -49,15 +49,6 @@
     background-size: auto;
 }
 
-<<<<<<< HEAD
-=======
-.about {
-    height: 20vh;
-    width: 99vw;
-}
-
-
->>>>>>> ddt-landing
 .quote{
     margin-left: 20vh;
     font-family: 'Poppins', sans-serif;
@@ -66,12 +57,8 @@
 }
 
 .aboutBreak{
-<<<<<<< HEAD
     background-image: url("../../assets/TeamLine.jpeg");
     width: 100vw;
-=======
-    background-image: url("../photos/TeamLine.jpeg");
->>>>>>> ddt-landing
     height: 40vh;
     background-repeat: no-repeat;
     background-position-y: 30%;
@@ -113,5 +100,13 @@
     background-color: rgba(255, 255, 255, 1.0);
     height: 1vh;
     text-align: center;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
+
+/* .Logo{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    height: 20%;
+    z-index: 5;
+} */
