--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,16 +1,14 @@
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div>
-    <label>Name:</label>
+    <label>Username:</label>
     <input for="text" formControlName="name">
-  </div>
-  <div>
-    <label>Email:</label>
-    <input for="email" formControlName="email">
   </div>
   <div>
     <label>Password:</label>
     <input for="password" formControlName="password">
   </div>
-  <button type="submit">Submit</button>
+  <div>
+    <button type="submit">Submit</button>
+  </div>
 </form>
