--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -1,5 +1,24 @@
-<h2>Login</h2>
-<form [formGroup]="employeeCreateForm" (ngSubmit)="onSubmit()">
+<h2>Sign Up</h2>
+<div class="signUp-Container">
+  <mat-form-field>
+    <input matInput placeholder="Email" [formControl]="email" required>
+    <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage</mat-error> -->
+  </mat-form-field>
+
+  <mat-form-field>
+      <input matInput placeholder="Password" [formControl]="password" required>
+  </mat-form-field>
+
+  <mat-form-field>
+        <input matInput placeholder="Name" [formControl]="name" required>
+  </mat-form-field>
+
+</div>
+
+
+<!-- <h2>Sign Up</h2>
+<div class="signUpContainer">
+<form [formGroup]="AccountCreateForm" (ngSubmit)="onSubmit()">
   <div>
     <label>Name:</label>
     <input type="text" formControlName="name">
@@ -50,3 +69,6 @@
   </div>
   <button type="submit">Submit</button>
 </form>
+</div> -->
+
+
