--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -13,4 +13,7 @@
     <input for="password" formControlName="password">
   </div>
   <button type="submit">Submit</button>
+  <br />
+  <label>Don't have an account?</label>
+  <button>Sign Up!</button>
 </form>
