--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -13,7 +13,7 @@
 
 <div class="landing">
   <button class="button1" routerLink="/posts">SEE JOBS</button>
-  <button class="button2" routerLink="/account">YOUR ACCOUNT</button>
+  <button class="button2" routerLink="/create">YOUR ACCOUNT</button>
 </div>
 <div class="testimony">
   <img class="peyton">
