--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,12 +1,13 @@
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div>
-    <label>Username:</label>
-    <input for="text" formControlName="name">
+    <label>Username or Email:</label>
+    <input name="name" type="text" formControlName="name" (keyup)="handleName($event)" required>
+    <!-- <div *ngIf="name.errors.required">Username is required!</div> -->
   </div>
   <div>
     <label>Password:</label>
-    <input for="password" formControlName="password">
+    <input name="password" type="password" formControlName="password" (keyup)="handlePassword($event)" required>
   </div>
   <div>
     <button type="submit">Submit</button>
