--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -1,22 +1,5 @@
-<h2>Sign Up</h2>
-<div class="signUp-Container">
-  <mat-form-field>
-    <input matInput placeholder="Email" [formControl]="email" required>
-    <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage</mat-error> -->
-  </mat-form-field>
-
-  <mat-form-field>
-      <input matInput placeholder="Password" [formControl]="password" required>
-  </mat-form-field>
-
-  <mat-form-field>
-        <input matInput placeholder="Name" [formControl]="name" required>
-  </mat-form-field>
-
-</div>
-
-
-<!-- <h2>Sign Up</h2>
+<h2 mat-dialog-title>Sign Up</h2>
+<mat-dialog-content class="mat-typography">
 <div class="signUpContainer">
 <form [formGroup]="AccountCreateForm" (ngSubmit)="onSubmit()">
   <div>
@@ -69,6 +52,10 @@
   </div>
   <button type="submit">Submit</button>
 </form>
-</div> -->
-
+</div>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button [mat-dialog-close]="submit" cdkFocusInitial>Sign Up</button>
+</mat-dialog-actions>
 
