--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,5 @@
+<div class="authBackground">
+  
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div>
@@ -14,3 +16,5 @@
   <label>Don't have an account?</label>
   <button>Sign Up!</button>
 </form>
+
+</div>
