auth_page_inProgess

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,6 @@
-<div class="authBackground">
-  
+<div>
+<div class="authBackground"></div>
+<div class="authBox">
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div>
@@ -16,5 +17,6 @@
   <label>Don't have an account?</label>
   <button>Sign Up!</button>
 </form>
-
 </div>
+</div>
+
