auth_page_style_inProgress

--- a/src/app/account-create/account-create.component.css
+++ b/src/app/account-create/account-create.component.css
@@ -3,6 +3,14 @@
     flex-direction: column;
     width: 50vw;
   }
+
+.title{
+  text-align: center;
+}
+
+.formItems{
+  text-align: center;
+}
   
   .signUpContainer form {
     margin-bottom: 50em;
