--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -1,13 +1,7 @@
-<h2 mat-dialog-title>Sign Up</h2>
+<h2 class="title" mat-dialog-title>Sign Up</h2>
 <mat-dialog-content class="mat-typography">
 <div class="signUpContainer">
-<form [formGroup]="AccountCreateForm" (ngSubmit)="onSubmit()">
-  <mat-radio-group [required]="true">
-    <div>Please select a button</div>
-    <br />
-    <mat-radio-button name="business" value="business" (change)="handleButton($event)">Business</mat-radio-button>
-    <mat-radio-button name="freelance" value="freelance" (change)="handleButton($event)">Freelancer</mat-radio-button>
-  </mat-radio-group>
+<form class="formItems" [formGroup]="AccountCreateForm" (ngSubmit)="onSubmit()">
   <div>
     <label>Username:</label>
     <input type="text" formControlName="name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
@@ -30,7 +24,27 @@
         <div *ngIf="f.password.errors.required">Password is required!</div>
       </div>
   </div>
-  <div>
+  
+  <mat-radio-group [required]="true">
+      <div>Please select a button</div>
+      <br />
+      <mat-radio-button name="business" value="business" (change)="handleButton($event)">Business</mat-radio-button>
+      <mat-radio-button name="freelance" value="freelance" (change)="handleButton($event)">Freelancer</mat-radio-button>
+    </mat-radio-group>
+</form>
+</div>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-button cdkFocusInitial type="button" mat-dialog-close>Cancel</button>
+    <button mat-button mat-dialog-close (click)="onSubmit()" [disabled]="!AccountCreateForm.valid">Sign Up</button>
+</mat-dialog-actions>
+
+
+
+<!-- Below Are Other Items For Sign Up / Profile Fillers -->
+
+
+<!-- <div>
     <label>Profile Picture:</label>
     <input type="picture" formControlName="profilepicture">
   </div>
@@ -65,12 +79,4 @@
   <div>
     <label>About You:</label>
     <input type="textarea" formControlName="about">
-  </div>
-</form>
-</div>
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button cdkFocusInitial type="button" mat-dialog-close>Cancel</button>
-    <button mat-button mat-dialog-close (click)="onSubmit()" [disabled]="!AccountCreateForm.valid">Sign Up</button>
-</mat-dialog-actions>
-
+  </div> -->
