modal on login page option

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -14,7 +14,7 @@
       <button type="submit">Submit</button>
       <br />
       <label>Don't have an account?</label>
-      <button>Sign Up!</button>
+      <button mat-button (click)="openForm()">Sign Up!</button>
     </form>
     <div class="authBackground"></div>
   </div>
