--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,20 +1,26 @@
+<app-navbar></app-navbar>
 <div class="authBackground">
-  
-<h2>Login</h2>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div>
-    <label>Username or Email:</label>
-    <input name="name" type="text" formControlName="name" (keyup)="handleName($event)" required>
-    <!-- <div *ngIf="name.errors.required">Username is required!</div> -->
-  </div>
-  <div>
-    <label>Password:</label>
-    <input name="password" type="password" formControlName="password" (keyup)="handlePassword($event)" required>
-  </div>
-  <button type="submit">Submit</button>
-  <br />
-  <label>Don't have an account?</label>
-  <button>Sign Up!</button>
-</form>
+  <h2>Login</h2>
+  <mat-radio-group [(ngModel)]="typeOfAccount" name="typeOfAccount">
+    <div>Please select a button (required):</div>
+    <br />
+    <mat-radio-button name="business" value="business" (change)="handleAccountType($event)">Business</mat-radio-button>
+    <mat-radio-button name="freelance" value="freelance" (change)="handleAccountType($event)">Freelancer</mat-radio-button>
+  </mat-radio-group>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label>Username or Email:</label>
+      <input name="name" type="text" formControlName="name" (keyup)="handleName($event)" required>
+      <!-- <div *ngIf="name.errors.required">Username is required!</div> -->
+    </div>
+    <div>
+      <label>Password:</label>
+      <input name="password" type="password" formControlName="password" (keyup)="handlePassword($event)" required>
+    </div>
+    <button type="submit" [disabled]="typeOfAccount !== 'freelance' && typeOfAccount !== 'business' ">Submit</button>
+    <br />
+    <label>Don't have an account?</label>
+    <button>Sign Up!</button>
+  </form>
 
 </div>
