--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,9 @@
 <div class="collapse show" [@collapse]="collapse">
 <mat-toolbar class="toolbar" color="primary">
   <mat-toolbar-row class="toolbar-row1">
+    <span class="home"><a href="/">Home</a></span>
     <span class="auth"><a href="/account">Sign in/up</a></span>
-    <span class="jobs"><a href="/jobs">Job Posts</a></span>
+    <span class="jobs"><a href="/posts">Job Posts</a></span>
     <span class="profile"><a href="/profile">Profile</a></span>
   </mat-toolbar-row>
 </mat-toolbar>
