all day, by myself

--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -64,7 +64,7 @@
       </div>
       <div>
         <label>About You: </label>
-        <input type="textarea" formControlName="about">
+        <textarea formControlName="about"></textarea>
       </div>
     </form>
   </div>
