--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -10,7 +10,6 @@
 
 
 .authContainer{
-    /* background-image: url('../../assets/login_page.jpg'); */
     height: 100vh;
     width: 100vw;
     background-position: center;
@@ -20,25 +19,43 @@
 
 .authBox{
     width: 20vw;
-    height: 25vh;
-    background-color: rgba(56, 186, 223, .5);
-    margin-top: 21vw;
+    height: 50vh;
+    background-color: rgba(56, 186, 223, .2);
+    margin-top: 22vh;
     margin-left: 38vw;
     font-family: 'Poppin', sans-serif;
     text-align: center;
-    box-shadow: 15,15,15,15;
     position: relative;
-    /* margin-top: 25em; */
-    /* float: center; */
-    /* padding-top: 25em; */
-    /* margin: 0 auto */
+    box-shadow: 0em 2em 3em #888888;
 }
 
 .unBox, .pwBox{
     width: 22em;
-
+    height: 3em;
+    font-size: .9em;
 }
 
-.things{
-    margin: 0 auto;
+.title{
+    padding-top: .8em;
+    font-size: 2.5em;
+}
+
+hr {
+    height: .05em;
+    color: #000000;
+    background-color: #000000;
+    border: none;
+    }
+
+/* .signUp{
+    background-color
+} */
+
+.button{
+    width: 7em;
+    height: 3em;
+    background-color: white;
+    border-radius: 15px;
+    font-size: 1em
+
 }
