--- a/src/app/account-create/account-create.component.css
+++ b/src/app/account-create/account-create.component.css
@@ -2,7 +2,20 @@
     display: flex;
     flex-direction: column;
     width: 50vw;
-  }
+    text-align: center;
+}
+
+#inputBox{
+  width: 45vw;
+  height: 3vh;
+  outline-style: solid;
+  outline-color: #c7c7c7;
+  
+}
+
+#buttons{
+  text-align: center;
+}
 
 .title{
   text-align: center;
@@ -12,6 +25,67 @@
   text-align: center;
   font-family: 'Poppins'
 }
+  
+.signUpContainer form {
+    margin-bottom: 1em;
+    
+  }
+  
+.signUpContainer form > * {
+    margin: 1em 0em;
+    
+  }
+  
+.signUpContainer .mat-radio-button {
+    margin: 0em 1em;
+    
+  }
+
+.signUpContainer {
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+}
+
+
+
+@media (min-width: 320px) and (max-width: 480px){
+
+.title{
+text-align: center;
+}
+
+.formItems{
+text-align: center;
+font-family: 'Poppins'
+}
+
+.signUpContainer form {
+  margin-bottom: 50em;
+}
+
+.signUpContainer form > * {
+  margin: 1em 0em;
+}
+
+.signUpContainer .mat-radio-button {
+  margin: 0em 1em;
+}
+
+}
+
+
+
+
+
+.title{
+  text-align: center;
+  }
+  
+  .formItems{
+  text-align: center;
+  font-family: 'Poppins'
+  }
   
   .signUpContainer form {
     margin-bottom: 50em;
@@ -24,3 +98,4 @@
   .signUpContainer .mat-radio-button {
     margin: 0em 1em;
   }
+
