--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -1,4 +1,4 @@
-<h2 class="title" mat-dialog-title>Sign Up</h2>
+<h2 class="title" mat-dialog-title>SIGN UP FOR NEXUS</h2>
 <mat-dialog-content class="mat-typography">
   <div class="signUpContainer">
     <form [formGroup]="AccountCreateForm" (ngSubmit)="onSubmit()">
@@ -9,67 +9,67 @@
           <mat-radio-button name="freelance" value="freelance" (change)="handleButton($event)">Freelancer</mat-radio-button>
         </mat-radio-group>
       <div>
-        <label>Username (required): </label>
-        <input type="text" formControlName="name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="Username*" formControlName="name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
         <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
           <div *ngIf="f.name.errors.required">Username is required!</div>
         </div>
       </div>
       <div>
-        <label>Email (required): </label>
-        <input type="email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+        <label></label>
+        <input type="email" id="inputBox" placeholder="Email*" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
           <div *ngIf="f.email.errors.required">Email is required!</div>
           <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
         </div>
       </div>
       <div>
-        <label>Password (required): </label>
-        <input type="password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+        <label></label>
+        <input type="password" id="inputBox" placeholder="password*" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
           <div *ngIf="f.password.errors.required">Password is required!</div>
         </div>
       </div>
       <div>
-        <label>Profile Picture: </label>
-        <input type="picture" formControlName="profilepicture">
+        <label></label>
+        <input type="picture" id="inputBox" placeholder="Profile Picture" formControlName="profilepicture">
       </div>
       <div>
-        <label>Phone Number: </label>
-        <input type="text" formControlName="phonenumber">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="Phone #" formControlName="phonenumber">
       </div>
       <div>
-        <label>location: </label>
-        <input type="text" formControlName="location">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="Location" formControlName="location">
       </div>
       <div>
-        <label>Linkdin: </label>
-        <input type="text" formControlName="linkdin">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="LinkedIn" formControlName="linkdin">
       </div>
       <div>
-        <label>FaceBook: </label>
-        <input type="text" formControlName="facebook">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="FaceBook" formControlName="facebook">
       </div>
       <div>
-        <label>Instagram: </label>
-        <input type="text" formControlName="instagram">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="Instagram" formControlName="instagram">
       </div>
       <div>
-        <label>Twitter: </label>
-        <input type="text" formControlName="twitter">
+        <label></label>
+        <input type="text" id="inputBox" placeholder="Twitter" formControlName="twitter">
       </div>
       <div>
-        <label>Skills: </label>
-        <input type="options" formControlName="skills">
+        <label></label>
+        <input type="options" id="inputBox" placeholder="Skills" formControlName="skills">
       </div>
       <div>
-        <label>About You: </label>
-        <textarea formControlName="about"></textarea>
+        <label></label>
+        <textarea id="inputBox" placeholder="About You or Your Business" formControlName="about"></textarea>
       </div>
     </form>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button cdkFocusInitial type="button" mat-dialog-close>Cancel</button>
-  <button mat-button mat-dialog-close (click)="onSubmit()" [disabled]="!AccountCreateForm.valid || typeOfAccount !== 'freelance' && typeOfAccount !== 'business' ">Sign Up</button>
+  <button id="buttons" mat-button cdkFocusInitial type="button" mat-dialog-close>Cancel</button>
+  <button id="buttons" mat-button mat-dialog-close (click)="onSubmit()" [disabled]="!AccountCreateForm.valid || typeOfAccount !== 'freelance' && typeOfAccount !== 'business' ">Sign Up</button>
 </mat-dialog-actions>
