--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -12,7 +12,7 @@
 
 
 <div class="landing">
-  <button class="button1" routerLink="/posts">SEE JOBS</button>
+  <button class="button1" mat-button routerLink="/posts">SEE JOBS</button>
   <button class="button2" mat-button (click)="openForm()">CREATE AN ACCOUNT</button>
 </div>
 <div class="testimony">
