pre_style_jobPage

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,14 +1,15 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+<app-navbar></app-navbar>
 
-<nav class="NavBar" >
-  <!-- <img src="../../assets/nexus_X.png" class="Logo" /> -->
+<!-- <nav class="NavBar" >
+ 
   <ul>
     <a class="AboutUs" href="http://localhost:4200/landing#aboutSect">ABOUT US</a>
     <a class="Jobs" routerLink="/posts">JOBS</a>
     <a class="Account" routerLink="/account">ACCOUNT</a>
   </ul>
   
-</nav>
+</nav> -->
 
 
 <div class="landing">
