--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -113,6 +113,7 @@
     
     .landing {
         background-image: url("../../assets/Nexus_Landing_Page_BKG.jpg");
+        background-repeat: no-repeat;
         height: 100vh;
         width: 100vw;
         margin-top: -.5em;
