--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,13 +1,35 @@
 <app-navbar></app-navbar>
-<h1>Job Posts</h1>
-<div>
-  <div *ngFor="let post of posts">
-    <div><h4>{{ post.jobTitle }}</h4></div>
-    <table>
-      <td>{{ post.location }}</td>
-      <td>{{ post.payRange }}</td>
-      <td>{{ post.skills }}</td>
-      <td>{{ post.jobDescription }}</td>
-    </table>
-  </div>
-</div>
+<body>
+    <div class="jumbotronBKG">
+      <h1 class="pageTitle">NEXUS CAREERS!</h1>
+    </div>
+    <br />
+    <br />
+    <br />
+<!-- 
+    <div class="searhingInfo">
+      <h2>SEARCH</h2>
+      <p>look for the jobs that suit you best!</p>
+    </div>
+
+    <div class="contactInfo">
+        <h2>CONTACT</h2>
+        <p>contact the employer</p>
+      </div> -->
+
+   
+        <div *ngFor="let post of posts">
+          <mat-card>
+            <div><h4>{{ post.jobTitle }}</h4></div>
+            <table>
+              <td>{{ post.location }}</td>
+              <td>{{ post.payRange }}</td>
+              <td>{{ post.skills }}</td>
+              <td>{{ post.jobDescription }}</td>
+            </table>
+          </mat-card>
+          <br />
+          hy</div>
+    
+
+</body>
