--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,16 @@
 <app-navbar></app-navbar>
-<p>
-  profile works!
-</p>
+<div>
+  <p>{{ profile.name }}</p>
+  <p>{{ profile.email }}</p>
+  <p>{{ profile.phoneNumber }}</p>
+  <p>{{ profile.location }}</p>
+  <p>{{ profile.linkdin }}</p>
+  <p>{{ profile.faceBook }}</p>
+  <p>{{ profile.instagram }}</p>
+  <p>{{ profile.twitter }}</p>
+  <p>{{ profile.skills }}</p>
+  <p>{{ profile.about }}</p>
+  <p>{{ profile.profilePicture }}</p>
+  <button mat-button (click)="openForm()">Update</button>
+</div>
+ 
